Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-build-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-build-items.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-04-27 02:52+0000\n"
+"POT-Creation-Date: 2022-05-02 02:55+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -5274,7 +5274,7 @@ msgid ""
 "`String overflow` :: +++The name of the overflow strategy. Valid values are . If not set, it uses  with a default buffer size.+++\n"
 "`int bufferSize` :: +++The buffer size, used when  is set to . Not that if  is set to and  is not set, an unbounded buffer is used.+++\n"
 "`boolean hasBroadcast` :: +++Whether the emitter uses the  annotation.+++\n"
-"`boolean isMutinyEmitter` :: +++Whether the emitter is a  or a regular (non-mutiny) emitter.+++\n"
+"`String emitterType` :: +++The emitter type+++\n"
 "`int awaitSubscribers` :: +++If the emitter uses the  annotation, indicates the number of subscribers to be expected before subscribing upstream.+++"
 msgstr ""
 
