--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-mailer-mail-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-mailer-mail-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-04 01:46+0900\n"
+"POT-Creation-Date: 2022-05-02 02:55+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -59,12 +59,17 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:72
 #: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:108
 #: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:135
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:148
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:157
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:166
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:185
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:241
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:250
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:153
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:162
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:171
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:180
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:189
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:256
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:265
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:274
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:293
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:349
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:358
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -88,9 +93,11 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:90
 #: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:117
 #: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:126
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:194
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:203
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:212
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:144
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:225
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:302
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:311
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:320
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
@@ -140,6 +147,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:54
 #: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:99
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:216
 #, no-wrap
 msgid "int"
 msgstr "int"
@@ -183,8 +191,9 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:84
 #: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:129
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:197
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:206
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:147
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:305
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:314
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
@@ -245,7 +254,7 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:120
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:215
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:323
 #, no-wrap
 msgid "`true`"
 msgstr "`true`"
@@ -281,7 +290,171 @@ msgid "`OPTIONAL`"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:147
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:143
+#, no-wrap
+msgid ""
+"[[quarkus-mailer-mail-config_quarkus.mailer.dkim.enabled]]`link:#quarkus-mailer-mail-config_quarkus.mailer.dkim.enabled[quarkus.mailer.dkim.enabled]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Enables DKIM signing.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:152
+#, no-wrap
+msgid ""
+"[[quarkus-mailer-mail-config_quarkus.mailer.dkim.private-key]]`link:#quarkus-mailer-mail-config_quarkus.mailer.dkim.private-key[quarkus.mailer.dkim.private-key]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configures the PKCS++#++8 format private key used to sign the email.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:161
+#, no-wrap
+msgid ""
+"[[quarkus-mailer-mail-config_quarkus.mailer.dkim.private-key-path]]`link:#quarkus-mailer-mail-config_quarkus.mailer.dkim.private-key-path[quarkus.mailer.dkim.private-key-path]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configures the PKCS++#++8 format private key file path.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:170
+#, no-wrap
+msgid ""
+"[[quarkus-mailer-mail-config_quarkus.mailer.dkim.auid]]`link:#quarkus-mailer-mail-config_quarkus.mailer.dkim.auid[quarkus.mailer.dkim.auid]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configures the Agent or User Identifier(AUID).\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:179
+#, no-wrap
+msgid ""
+"[[quarkus-mailer-mail-config_quarkus.mailer.dkim.selector]]`link:#quarkus-mailer-mail-config_quarkus.mailer.dkim.selector[quarkus.mailer.dkim.selector]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configures the selector used to query the public key.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:188
+#, no-wrap
+msgid ""
+"[[quarkus-mailer-mail-config_quarkus.mailer.dkim.sdid]]`link:#quarkus-mailer-mail-config_quarkus.mailer.dkim.sdid[quarkus.mailer.dkim.sdid]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configures the Signing Domain Identifier.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:197
+#, no-wrap
+msgid ""
+"[[quarkus-mailer-mail-config_quarkus.mailer.dkim.header-canon-algo]]`link:#quarkus-mailer-mail-config_quarkus.mailer.dkim.header-canon-algo[quarkus.mailer.dkim.header-canon-algo]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configures the canonicalization algorithm for signed headers.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:198
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:207
+#, no-wrap
+msgid "`simple`, `relaxed`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:206
+#, no-wrap
+msgid ""
+"[[quarkus-mailer-mail-config_quarkus.mailer.dkim.body-canon-algo]]`link:#quarkus-mailer-mail-config_quarkus.mailer.dkim.body-canon-algo[quarkus.mailer.dkim.body-canon-algo]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configures the canonicalization algorithm for mail body.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:215
+#, no-wrap
+msgid ""
+"[[quarkus-mailer-mail-config_quarkus.mailer.dkim.body-limit]]`link:#quarkus-mailer-mail-config_quarkus.mailer.dkim.body-limit[quarkus.mailer.dkim.body-limit]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configures the body limit to sign. Must be greater than zero.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:224
+#, no-wrap
+msgid ""
+"[[quarkus-mailer-mail-config_quarkus.mailer.dkim.signature-timestamp]]`link:#quarkus-mailer-mail-config_quarkus.mailer.dkim.signature-timestamp[quarkus.mailer.dkim.signature-timestamp]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configures to enable or disable signature sign timestmap.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:233
+#, no-wrap
+msgid ""
+"[[quarkus-mailer-mail-config_quarkus.mailer.dkim.expire-time]]`link:#quarkus-mailer-mail-config_quarkus.mailer.dkim.expire-time[quarkus.mailer.dkim.expire-time]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configures the expire time in seconds when the signature sign will be expired. Must be greater than zero.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:234
+#, no-wrap
+msgid "long"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:242
+#, no-wrap
+msgid ""
+"[[quarkus-mailer-mail-config_quarkus.mailer.dkim.signed-headers]]`link:#quarkus-mailer-mail-config_quarkus.mailer.dkim.signed-headers[quarkus.mailer.dkim.signed-headers]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configures the signed headers in DKIM, separated by commas. The order in the list matters.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:243
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:284
+#, fuzzy, no-wrap
+msgid "list of string"
+msgstr "string"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:255
 #, no-wrap
 msgid ""
 "[[quarkus-mailer-mail-config_quarkus.mailer.login]]`link:#quarkus-mailer-mail-config_quarkus.mailer.login[quarkus.mailer.login]`\n"
@@ -297,13 +470,13 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:151
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:259
 #, no-wrap
 msgid "`NONE`"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:156
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:264
 #, no-wrap
 msgid ""
 "[[quarkus-mailer-mail-config_quarkus.mailer.auth-methods]]`link:#quarkus-mailer-mail-config_quarkus.mailer.auth-methods[quarkus.mailer.auth-methods]`\n"
@@ -315,7 +488,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:165
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:273
 #, no-wrap
 msgid ""
 "[[quarkus-mailer-mail-config_quarkus.mailer.truststore.password]]`link:#quarkus-mailer-mail-config_quarkus.mailer.truststore.password[quarkus.mailer.truststore.password]`\n"
@@ -327,7 +500,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:175
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:283
 #, no-wrap
 msgid ""
 "[[quarkus-mailer-mail-config_quarkus.mailer.truststore.paths]]`link:#quarkus-mailer-mail-config_quarkus.mailer.truststore.paths[quarkus.mailer.truststore.paths]`\n"
@@ -340,13 +513,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:176
-#, fuzzy, no-wrap
-msgid "list of string"
-msgstr "string"
-
-#. type: Table
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:184
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:292
 #, no-wrap
 msgid ""
 "[[quarkus-mailer-mail-config_quarkus.mailer.truststore.type]]`link:#quarkus-mailer-mail-config_quarkus.mailer.truststore.type[quarkus.mailer.truststore.type]`\n"
@@ -358,7 +525,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:193
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:301
 #, no-wrap
 msgid ""
 "[[quarkus-mailer-mail-config_quarkus.mailer.multi-part-only]]`link:#quarkus-mailer-mail-config_quarkus.mailer.multi-part-only[quarkus.mailer.multi-part-only]`\n"
@@ -370,7 +537,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:202
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:310
 #, no-wrap
 msgid ""
 "[[quarkus-mailer-mail-config_quarkus.mailer.allow-rcpt-errors]]`link:#quarkus-mailer-mail-config_quarkus.mailer.allow-rcpt-errors[quarkus.mailer.allow-rcpt-errors]`\n"
@@ -382,7 +549,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:211
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:319
 #, no-wrap
 msgid ""
 "[[quarkus-mailer-mail-config_quarkus.mailer.pipelining]]`link:#quarkus-mailer-mail-config_quarkus.mailer.pipelining[quarkus.mailer.pipelining]`\n"
@@ -394,7 +561,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:220
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:328
 #, no-wrap
 msgid ""
 "[[quarkus-mailer-mail-config_quarkus.mailer.pool-cleaner-period]]`link:#quarkus-mailer-mail-config_quarkus.mailer.pool-cleaner-period[quarkus.mailer.pool-cleaner-period]`\n"
@@ -406,8 +573,8 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:222
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:232
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:330
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:340
 #, no-wrap
 msgid ""
 "link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]\n"
@@ -415,13 +582,13 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:225
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:333
 #, no-wrap
 msgid "`PT1S`"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:230
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:338
 #, no-wrap
 msgid ""
 "[[quarkus-mailer-mail-config_quarkus.mailer.keep-alive-timeout]]`link:#quarkus-mailer-mail-config_quarkus.mailer.keep-alive-timeout[quarkus.mailer.keep-alive-timeout]`\n"
@@ -433,13 +600,13 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:235
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:343
 #, no-wrap
 msgid "`PT300S`"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:240
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:348
 #, no-wrap
 msgid ""
 "[[quarkus-mailer-mail-config_quarkus.mailer.ntlm.workstation]]`link:#quarkus-mailer-mail-config_quarkus.mailer.ntlm.workstation[quarkus.mailer.ntlm.workstation]`\n"
@@ -451,7 +618,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:249
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:357
 #, no-wrap
 msgid ""
 "[[quarkus-mailer-mail-config_quarkus.mailer.ntlm.domain]]`link:#quarkus-mailer-mail-config_quarkus.mailer.ntlm.domain[quarkus.mailer.ntlm.domain]`\n"
@@ -463,17 +630,17 @@ msgid ""
 msgstr ""
 
 #. type: Block title
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:256
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:364
 #, no-wrap
 msgid "About the Duration format"
 msgstr "期間フォーマットについて"
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:260
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:368
 msgid "The format for durations uses the standard `java.time.Duration` format.  You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc]."
 msgstr "期間のフォーマットは標準の `java.time.Duration` フォーマットを使用します。詳細は link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc] を参照してください。"
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:264
+#: upstream/_generated-config/main/config/quarkus-mailer-mail-config.adoc:372
 msgid "You can also provide duration values starting with a number.  In this case, if the value consists only of a number, the converter treats the value as seconds.  Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format."
 msgstr "数値で始まる期間の値を指定することもできます。この場合、値が数値のみで構成されている場合、コンバーターは値を秒として扱います。そうでない場合は、 `PT` が暗黙的に値の前に付加され、標準の `java.time.Duration` 形式が得られます。"
