--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-mailer-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-mailer-general-config-items.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-14 02:13+0000\n"
+"POT-Creation-Date: 2022-05-02 02:55+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -43,6 +43,203 @@ msgstr "デフォルト"
 #: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:16
 #, no-wrap
 msgid ""
+"[[quarkus-mailer-general-config-items_quarkus.mailer.dkim.enabled]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.enabled[quarkus.mailer.dkim.enabled]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Enables DKIM signing.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:17
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:98
+#, no-wrap
+msgid "boolean"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:20
+#, no-wrap
+msgid "`false`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:25
+#, no-wrap
+msgid ""
+"[[quarkus-mailer-general-config-items_quarkus.mailer.dkim.private-key]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.private-key[quarkus.mailer.dkim.private-key]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configures the PKCS++#++8 format private key used to sign the email.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:26
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:35
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:44
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:53
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:62
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:125
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:144
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:153
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:162
+#, no-wrap
+msgid "string"
+msgstr "string"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:34
+#, no-wrap
+msgid ""
+"[[quarkus-mailer-general-config-items_quarkus.mailer.dkim.private-key-path]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.private-key-path[quarkus.mailer.dkim.private-key-path]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configures the PKCS++#++8 format private key file path.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:43
+#, no-wrap
+msgid ""
+"[[quarkus-mailer-general-config-items_quarkus.mailer.dkim.auid]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.auid[quarkus.mailer.dkim.auid]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configures the Agent or User Identifier(AUID).\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:52
+#, no-wrap
+msgid ""
+"[[quarkus-mailer-general-config-items_quarkus.mailer.dkim.selector]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.selector[quarkus.mailer.dkim.selector]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configures the selector used to query the public key.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:61
+#, no-wrap
+msgid ""
+"[[quarkus-mailer-general-config-items_quarkus.mailer.dkim.sdid]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.sdid[quarkus.mailer.dkim.sdid]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configures the Signing Domain Identifier.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:70
+#, no-wrap
+msgid ""
+"[[quarkus-mailer-general-config-items_quarkus.mailer.dkim.header-canon-algo]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.header-canon-algo[quarkus.mailer.dkim.header-canon-algo]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configures the canonicalization algorithm for signed headers.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:71
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:80
+#, no-wrap
+msgid "`simple`, `relaxed`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:79
+#, no-wrap
+msgid ""
+"[[quarkus-mailer-general-config-items_quarkus.mailer.dkim.body-canon-algo]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.body-canon-algo[quarkus.mailer.dkim.body-canon-algo]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configures the canonicalization algorithm for mail body.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:88
+#, no-wrap
+msgid ""
+"[[quarkus-mailer-general-config-items_quarkus.mailer.dkim.body-limit]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.body-limit[quarkus.mailer.dkim.body-limit]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configures the body limit to sign. Must be greater than zero.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:89
+#, no-wrap
+msgid "int"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:97
+#, no-wrap
+msgid ""
+"[[quarkus-mailer-general-config-items_quarkus.mailer.dkim.signature-timestamp]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.signature-timestamp[quarkus.mailer.dkim.signature-timestamp]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configures to enable or disable signature sign timestmap.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:106
+#, no-wrap
+msgid ""
+"[[quarkus-mailer-general-config-items_quarkus.mailer.dkim.expire-time]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.expire-time[quarkus.mailer.dkim.expire-time]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configures the expire time in seconds when the signature sign will be expired. Must be greater than zero.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:107
+#, no-wrap
+msgid "long"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:115
+#, no-wrap
+msgid ""
+"[[quarkus-mailer-general-config-items_quarkus.mailer.dkim.signed-headers]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.signed-headers[quarkus.mailer.dkim.signed-headers]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configures the signed headers in DKIM, separated by commas. The order in the list matters.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:116
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:135
+#, no-wrap
+msgid "list of string"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:124
+#, no-wrap
+msgid ""
 "[[quarkus-mailer-general-config-items_quarkus.mailer.truststore.password]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.truststore.password[quarkus.mailer.truststore.password]`\n"
 "\n"
 "[.description]\n"
@@ -52,16 +249,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:17
-#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:36
-#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:45
-#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:54
-#, no-wrap
-msgid "string"
-msgstr "string"
-
-#. type: Table
-#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:26
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:134
 #, no-wrap
 msgid ""
 "[[quarkus-mailer-general-config-items_quarkus.mailer.truststore.paths]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.truststore.paths[quarkus.mailer.truststore.paths]`\n"
@@ -74,13 +262,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:27
-#, no-wrap
-msgid "list of string"
-msgstr ""
-
-#. type: Table
-#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:35
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:143
 #, no-wrap
 msgid ""
 "[[quarkus-mailer-general-config-items_quarkus.mailer.truststore.type]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.truststore.type[quarkus.mailer.truststore.type]`\n"
@@ -92,7 +274,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:44
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:152
 #, no-wrap
 msgid ""
 "[[quarkus-mailer-general-config-items_quarkus.mailer.ntlm.workstation]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.ntlm.workstation[quarkus.mailer.ntlm.workstation]`\n"
@@ -104,7 +286,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:53
+#: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:161
 #, no-wrap
 msgid ""
 "[[quarkus-mailer-general-config-items_quarkus.mailer.ntlm.domain]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.ntlm.domain[quarkus.mailer.ntlm.domain]`\n"
