Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-mailer-config-group-dkim-sign-options-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-mailer-config-group-dkim-sign-options-config.adoc.po
@@ -31,13 +31,13 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-mailer-config-group-dkim-sign-options-config.adoc:9
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-mailer-config-group-dkim-sign-options-config.adoc:11
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-mailer-config-group-dkim-sign-options-config.adoc:16
@@ -56,13 +56,13 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-mailer-config-group-dkim-sign-options-config.adoc:98
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-mailer-config-group-dkim-sign-options-config.adoc:20
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-mailer-config-group-dkim-sign-options-config.adoc:25
@@ -84,7 +84,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-mailer-config-group-dkim-sign-options-config.adoc:62
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-mailer-config-group-dkim-sign-options-config.adoc:34
@@ -181,7 +181,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-mailer-config-group-dkim-sign-options-config.adoc:89
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-mailer-config-group-dkim-sign-options-config.adoc:97
@@ -211,7 +211,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-mailer-config-group-dkim-sign-options-config.adoc:107
 #, no-wrap
 msgid "long"
-msgstr ""
+msgstr "long"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-mailer-config-group-dkim-sign-options-config.adoc:115
