--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-mailer-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-mailer-general-config-items.adoc.po
@@ -56,13 +56,13 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:98
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:20
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:25
@@ -185,7 +185,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:89
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:97
@@ -215,7 +215,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:107
 #, no-wrap
 msgid "long"
-msgstr ""
+msgstr "long"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-mailer-general-config-items.adoc:115
