--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-mailer.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-mailer.adoc.po
@@ -446,7 +446,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-mailer.adoc:243
 #, no-wrap
 msgid "long"
-msgstr ""
+msgstr "long"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-mailer.adoc:251
