--- a/l10n/po/ja_JP/_versions/2.2/guides/amqp-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/amqp-dev-services.adoc.po
@@ -23,23 +23,23 @@ msgstr ""
 #: upstream/_versions/2.2/guides/amqp-dev-services.adoc:6
 #, no-wrap
 msgid "Dev Services for AMQP"
-msgstr ""
+msgstr "Dev Services for AMQP"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/amqp-dev-services.adoc:13
 msgid "Dev Services for AMQP automatically starts an AMQP 1.0 broker in dev mode and when running tests.  So, you don't have to start a broker manually.  The application is configured automatically."
-msgstr ""
+msgstr "Dev Services for AMQP は、開発モードやテストの実行時に AMQP 1.0 ブローカーを自動的に起動します。そのため、ブローカーを手動で起動する必要はありません。アプリケーションは自動的に構成されます。"
 
 #. type: Title ==
 #: upstream/_versions/2.2/guides/amqp-dev-services.adoc:14
 #, no-wrap
 msgid "Enabling / Disabling Dev Services for AMQP"
-msgstr ""
+msgstr "Dev Services for AMQPの有効化／無効化"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/amqp-dev-services.adoc:17
 msgid "Dev Services for AMQP is automatically enabled unless:"
-msgstr ""
+msgstr "以下の場合を除き、Dev Services for AMQPは自動的に有効になります。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/amqp-dev-services.adoc:19
@@ -49,7 +49,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/amqp-dev-services.adoc:20
 msgid "the `amqp-host` or `amqp-port` is configured"
-msgstr ""
+msgstr "`amqp-host` または `amqp-port` が設定されている場合"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/amqp-dev-services.adoc:21
@@ -59,7 +59,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/amqp-dev-services.adoc:25
 msgid "Dev Services for AMQP relies on Docker to start the broker.  If your environment does not support Docker, you will need to start the broker manually, or connect to an already running broker.  You can configure the broker access using the `amqp-host`, `amqp-port`, `amqp-user` and `amqp-password` properties."
-msgstr ""
+msgstr "Dev Services for AMQPでは、ブローカーの起動にDockerを使用しています。お使いの環境でDockerがサポートされていない場合は、ブローカーを手動で起動するか、すでに稼働しているブローカーに接続する必要があります。ブローカーのアクセスは、 `amqp-host` 、 `amqp-port` 、 `amqp-user` 、 `amqp-password` プロパティを使用して構成できます。"
 
 #. type: Title ==
 #: upstream/_versions/2.2/guides/amqp-dev-services.adoc:26
@@ -70,22 +70,22 @@ msgstr "共有ブローカー"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/amqp-dev-services.adoc:30
 msgid "Most of the time you need to share the broker between applications.  Dev Services for AMQP implements a _service discovery_ mechanism for your multiple Quarkus applications running in _dev_ mode to share a single broker."
-msgstr ""
+msgstr "ほとんどの場合、アプリケーション間でブローカーを共有する必要があります。Dev Services for AMQPは、 _dev_ モードで動作する複数のQuarkusアプリケーションが1つのブローカーを共有するための _サービスディスカバリー_ メカニズムを実装しています。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/amqp-dev-services.adoc:32
 msgid "Dev Services for AMQP starts the container with the `quarkus-dev-service-amqp` label which is used to identify the container."
-msgstr ""
+msgstr "Dev Services for AMQP は、コンテナを識別するために使用される `quarkus-dev-service-amqp` ラベルでコンテナを開始します。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/amqp-dev-services.adoc:36
 msgid "If you need multiple (shared) brokers, you can configure the `quarkus.amqp.devservices.service-name` attribute and indicate the broker name.  It looks for a container with the same value, or starts a new one if none can be found.  The default service name is `amqp`."
-msgstr ""
+msgstr "複数の（共有）ブローカーが必要な場合は、 `quarkus.amqp.devservices.service-name` 属性を設定し、ブローカー名を示します。同じ値のコンテナを探し、見つからない場合は新しいコンテナを開始します。デフォルトのサービス名は `amqp` です。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/amqp-dev-services.adoc:39
 msgid "Sharing is enabled by default in dev mode, but disabled in test mode.  You can disable the sharing with `quarkus.amqp.devservices.shared=false`."
-msgstr ""
+msgstr "共有は、devモードではデフォルトで有効ですが、testモードでは無効です。 `quarkus.amqp.devservices.shared=false` で共有を無効にすることが出来ます。"
 
 #. type: Title ==
 #: upstream/_versions/2.2/guides/amqp-dev-services.adoc:40
@@ -96,7 +96,7 @@ msgstr "ポートの設定"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/amqp-dev-services.adoc:44
 msgid "By default, Dev Services for AMQP picks a random port and configures the application.  You can set the port by configuring the `quarkus.amqp.devservices.port` property."
-msgstr ""
+msgstr "既定では、Dev Services for AMQP はランダムなポートを選択し、アプリケーションを構成します。ポートを設定するには、 `quarkus.amqp.devservices.port` プロパティを構成します。"
 
 #. type: Title ==
 #: upstream/_versions/2.2/guides/amqp-dev-services.adoc:45
@@ -107,7 +107,7 @@ msgstr "イメージの設定"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/amqp-dev-services.adoc:49
 msgid "Dev Services for AMQP uses https://quay.io/repository/artemiscloud/activemq-artemis-broker[activemq-artemis-broker] images.  You can configure the image and version using the `quarkus.amqp.devservices.image-name` property:"
-msgstr ""
+msgstr "Dev Services for AMQPでは、 link:https://quay.io/repository/artemiscloud/activemq-artemis-broker[activemq-artemis-broker]イメージを使用しています。 `quarkus.amqp.devservices.image-name` プロパティを使用して、イメージとバージョンを設定できます。"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/amqp-dev-services.adoc:53
