Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/websockets.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/websockets.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-04 02:33+0000\n"
+"POT-Creation-Date: 2022-05-03 02:52+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -473,7 +473,9 @@ msgstr "その他のWebSocket情報"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/websockets.adoc:241
-msgid "The Quarkus WebSocket implementation is an implementation of link:https://eclipse-ee4j.github.io/websocket-api/[Jakarta Websockets]."
+#, fuzzy
+#| msgid "The Quarkus WebSocket implementation is an implementation of link:https://eclipse-ee4j.github.io/websocket-api/[Jakarta Websockets]."
+msgid "The Quarkus WebSocket implementation is an implementation of link:https://jakarta.ee/specifications/websocket/[Jakarta Websockets]."
 msgstr "Quarkus WebSocketの実装は、 link:https://eclipse-ee4j.github.io/websocket-api/[Jakarta Websocket] の実装です。"
 
 #~ msgid "To complete this guide, you need:"
