Add some translations

--- a/l10n/po/ja_JP/_guides/cdi-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/cdi-reference.adoc.po
@@ -206,7 +206,7 @@ msgstr "ディスカバリーから型と依存関係を除外する方法"
 #. type: Plain text
 #: upstream/_guides/cdi-reference.adoc:105
 msgid "It may happen that some beans from third-party libraries do not work correctly in Quarkus.  A typical example is a bean injecting a portable extension.  In such case, it's possible to exclude types and dependencies from the bean discovery.  The `quarkus.arc.exclude-types` property accepts a list of string values that are used to match classes that should be excluded."
-msgstr "サードパーティーのライブラリーからのいくつかの Bean が Quarkus で正しく動作しないことがあります。典型的な例は、ポータブル拡張機能を注入する Bean です。このような場合は、型や依存関係を Bean の検出から除外することができます。`quarkus.arc.exclude-types` プロパティーは、除外すべきクラスに一致するために使用される文字列値のリストを受け入れます。"
+msgstr "サードパーティーのライブラリーからのいくつかの Bean が Quarkus で正しく動作しないことがあります。典型的な例は、ポータブルエクステンションを注入する Bean です。このような場合は、型や依存関係を Bean の検出から除外することができます。`quarkus.arc.exclude-types` プロパティーは、除外すべきクラスに一致するために使用される文字列値のリストを受け入れます。"
 
 #. type: Block title
 #: upstream/_guides/cdi-reference.adoc:106
@@ -545,7 +545,7 @@ msgstr "`@ConversationScoped` はサポートされていません。"
 #. type: Plain text
 #: upstream/_guides/cdi-reference.adoc:211
 msgid "Portable Extensions are not supported"
-msgstr "ポータブル拡張機能はサポートされていません。"
+msgstr "ポータブルエクステンションはサポートされていません。"
 
 #. type: Plain text
 #: upstream/_guides/cdi-reference.adoc:212
