--- a/l10n/po/ja_JP/_guides/deploying-to-kubernetes.adoc.po
+++ b/l10n/po/ja_JP/_guides/deploying-to-kubernetes.adoc.po
@@ -1200,7 +1200,7 @@ msgstr ""
 #: upstream/_guides/deploying-to-kubernetes.adoc:678
 #, fuzzy
 msgid "The purpose of this extension is to generate Kubernetes manifests (`kind.yaml` and `kind.json`) that are tailored to Kind and also to automate the process of loading images to the cluster when performing container image builds. The tailor made manifests will be pretty similar (they share the same rules) with Minikube (see above)."
-msgstr "この拡張機能の目的は、Kindに合わせたKubernetesマニフェスト( `kind.yaml` と `kind.json`)を生成することと、コンテナイメージのビルドを行う際にクラスタにイメージをロードする処理を自動化することにあります。テーラーメイドのマニフェストは、Minikube（上記参照）とかなり似ている（同じルールを共有している）でしょう。"
+msgstr "このエクステンションの目的は、Kindに合わせたKubernetesマニフェスト( `kind.yaml` と `kind.json`)を生成することと、コンテナイメージのビルドを行う際にクラスタにイメージをロードする処理を自動化することにあります。テーラーメイドのマニフェストは、Minikube（上記参照）とかなり似ている（同じルールを共有している）でしょう。"
 
 #. type: Title ==
 #: upstream/_guides/deploying-to-kubernetes.adoc:679
@@ -3770,7 +3770,7 @@ msgstr "デプロイ"
 #: upstream/_guides/deploying-to-kubernetes.adoc:1275
 #, fuzzy
 msgid "When deployment is enabled, the Kubernetes extension will select the resources specified by `quarkus.kubernetes.deployment-target` and deploy them.  This assumes that a `.kube/config` is available in your user directory that points to the target Kubernetes cluster.  In other words the extension will use whatever cluster `kubectl` uses. The same applies to credentials."
-msgstr "デプロイメントを有効にすると、Kubernetesエクステンションは、 `quarkus.kubernetes.deployment-target` で指定されたリソースを選択し、デプロイします。これは、対象となるKubernetesクラスタを指し示す `.kube/config` がユーザーディレクトリ内にあることを前提としています。言い換えれば、拡張機能は、 `kubectl` が使用するどのようなクラスタも使用します。クレデンシャルについても同様です。"
+msgstr "デプロイメントを有効にすると、Kubernetesエクステンションは、 `quarkus.kubernetes.deployment-target` で指定されたリソースを選択し、デプロイします。これは、対象となるKubernetesクラスタを指し示す `.kube/config` がユーザーディレクトリ内にあることを前提としています。言い換えれば、エクステンションは、 `kubectl` が使用するどのようなクラスタも使用します。クレデンシャルについても同様です。"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:1277
@@ -3965,7 +3965,7 @@ msgstr "サービスバインディングのサポートを有効にするには
 #: upstream/_guides/deploying-to-kubernetes.adoc:1394
 #, fuzzy
 msgid "The following extensions can be used with Service Binding and are supported for Workload Projection:"
-msgstr "以下の拡張機能は、Service Bindingで使用でき、Workload Projectionでサポートされています。"
+msgstr "以下のエクステンションは、Service Bindingで使用でき、Workload Projectionでサポートされています。"
 
 #. type: delimited block =
 #: upstream/_guides/deploying-to-kubernetes.adoc:1397
@@ -4012,7 +4012,7 @@ msgstr "ワークロード・プロジェクション"
 #: upstream/_guides/deploying-to-kubernetes.adoc:1410
 #, fuzzy
 msgid "Workload Projection is a process of obtaining the configuration for services from the Kubernetes cluster. This configuration takes the form of directory structures that follow certain conventions and is attached to an application or to a service as a mounted volume. The `kubernetes-service-binding` extension uses this directory structure to create configuration sources, which allows you to configure additional modules, such as databases or message brokers."
-msgstr "Workload Projectionは、Kubernetesクラスタからサービスのコンフィグレーションを取得するプロセスです。コンフィグレーションは、一定の規則に従ったディレクトリ構造の形をしており、ボリュームマウントとしてアプリケーションやサービスに添付されます。 `kubernetes-service-binding` 拡張機能では、このディレクトリ構造を利用して構成ソースを作成し、データベースやメッセージブローカーなどの追加モジュールを構成することができます。"
+msgstr "Workload Projectionは、Kubernetesクラスタからサービスのコンフィグレーションを取得するプロセスです。コンフィグレーションは、一定の規則に従ったディレクトリ構造の形をしており、ボリュームマウントとしてアプリケーションやサービスに添付されます。 `kubernetes-service-binding` エクステンションでは、このディレクトリ構造を利用して構成ソースを作成し、データベースやメッセージブローカーなどの追加モジュールを構成することができます。"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:1412
@@ -4036,7 +4036,7 @@ msgstr "`k8s-sb` ディレクトリは、すべてのサービスバインディ
 #: upstream/_guides/deploying-to-kubernetes.adoc:1420
 #, fuzzy
 msgid "After your Quarkus project obtains information from `SERVICE_BINDING_ROOT` environment variables that are set by OpenShift, you can locate generated configuration files that are present in the file system and use them to map the configuration-file values to properties of certain extensions."
-msgstr "QuarkusプロジェクトがOpenShiftによって設定された `SERVICE_BINDING_ROOT` 環境変数から情報を取得した後、ファイルシステム内に存在する生成された設定ファイルを探し出し、それを使用して設定ファイルの値を特定の拡張機能のプロパティにマッピングすることができます。"
+msgstr "QuarkusプロジェクトがOpenShiftによって設定された `SERVICE_BINDING_ROOT` 環境変数から情報を取得した後、ファイルシステム内に存在する生成された設定ファイルを探し出し、それを使用して設定ファイルの値を特定のエクステンションのプロパティにマッピングすることができます。"
 
 #. type: Title ==
 #: upstream/_guides/deploying-to-kubernetes.adoc:1423
@@ -4084,7 +4084,7 @@ msgstr "ボリュームマウントを利用したワークロードへのバイ
 #: upstream/_guides/deploying-to-kubernetes.adoc:1437
 #, fuzzy
 msgid "The following chapter describes the automatic and semi-automatic service binding approaches and their use cases. With either approach, the `kubernetes-service-binding` extension generates a `ServiceBinding` resource. With the semi-automatic approach, users must provide a configuration for target services manually. With the automatic approach, for a limited set of services generating the `ServiceBinding` resource, no additional configuration is needed."
-msgstr "次の章では、自動および半自動のサービス結合アプローチとその使用例について説明します。いずれのアプローチでも、 `kubernetes-service-binding` の拡張機能により、 `ServiceBinding` のリソースが生成されます。半自動のアプローチでは、ユーザーは対象となるサービスの設定を手動で行う必要があります。自動アプローチでは、 `ServiceBinding` リソースを生成する限られたサービスに対して、追加の設定は必要ありません。"
+msgstr "次の章では、自動および半自動のサービス結合アプローチとその使用例について説明します。いずれのアプローチでも、 `kubernetes-service-binding` のエクステンションにより、 `ServiceBinding` のリソースが生成されます。半自動のアプローチでは、ユーザーは対象となるサービスの設定を手動で行う必要があります。自動アプローチでは、 `ServiceBinding` リソースを生成する限られたサービスに対して、追加の設定は必要ありません。"
 
 #. type: Title ===
 #: upstream/_guides/deploying-to-kubernetes.adoc:1439
@@ -4096,7 +4096,7 @@ msgstr "サービスの自動縛り"
 #: upstream/_guides/deploying-to-kubernetes.adoc:1442
 #, fuzzy
 msgid "A service binding process starts with a user specification of required services that will be bound to a certain application. This expression is summarized in the `ServiceBinding` resource that is generated by the `kubernetes-service-binding` extension. The use of the `kubernetes-service-binding` extensions helps users to generate `ServiceBinding` resources with minimal configuration, therefore simplifying the process overall."
-msgstr "サービス・バインディング・プロセスを開始するために、ユーザは特定のアプリケーションにバ インドする必要のあるサービスを指定する必要があります。この表現は、 `kubernetes-service-binding` 拡張機能によって生成される `ServiceBinding` リソースにまとめられます。 `kubernetes-service-binding` エクステンションを使用すると、ユーザーは最小限の設定で `ServiceBinding` リソースを生成できるため、プロセス全体が簡素化されます。"
+msgstr "サービス・バインディング・プロセスを開始するために、ユーザは特定のアプリケーションにバ インドする必要のあるサービスを指定する必要があります。この表現は、 `kubernetes-service-binding` エクステンションによって生成される `ServiceBinding` リソースにまとめられます。 `kubernetes-service-binding` エクステンションを使用すると、ユーザーは最小限の設定で `ServiceBinding` リソースを生成できるため、プロセス全体が簡素化されます。"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-kubernetes.adoc:1444
