--- a/l10n/po/ja_JP/_guides/jreleaser.adoc.po
+++ b/l10n/po/ja_JP/_guides/jreleaser.adoc.po
@@ -175,7 +175,7 @@ msgstr "link:http://maven.apache.org/plugins/maven-assembly-plugin/[maven-assemb
 #: upstream/_guides/jreleaser.adoc:116
 #, fuzzy
 msgid "First, let's add the os-maven-plugin to the `pom.xml`. This plugin works as a Maven extension and as such must be added to the `<build>` section of the file:"
-msgstr "まず、 `pom.xml` に os-maven-plugin を追加しましょう。このプラグインは、Maven の拡張機能として動作するため、ファイルの `<build>` セクションに追加する必要があります。"
+msgstr "まず、 `pom.xml` に os-maven-plugin を追加しましょう。このプラグインは、Maven のエクステンションとして動作するため、ファイルの `<build>` セクションに追加する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/jreleaser.adoc:128
