--- a/l10n/po/ja_JP/_guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka.adoc.po
@@ -131,7 +131,7 @@ msgstr ""
 #: upstream/_guides/kafka.adoc:65
 #, fuzzy
 msgid "The extension includes `kafka-clients` version 3.1.0 as a transitive dependency and is compatible with Kafka brokers version 2.x."
-msgstr "この拡張機能には、 `kafka-clients` バージョン 3.1.0 が推移依存関係として含まれており、Kafka ブローカー バージョン 2.x と互換性があります。"
+msgstr "このエクステンションには、 `kafka-clients` バージョン 3.1.0 が推移依存関係として含まれており、Kafka ブローカー バージョン 2.x と互換性があります。"
 
 #. type: Title ==
 #: upstream/_guides/kafka.adoc:67
@@ -3654,7 +3654,7 @@ msgstr "Kubernetesのサービスバインディング"
 #: upstream/_guides/kafka.adoc:1842
 #, fuzzy
 msgid "Quarkus Kafka extension supports xref:deploying-to-kubernetes.adoc[Service Binding Specification for Kubernetes].  You can enable this by adding the `quarkus-kubernetes-service-binding` extension to your application."
-msgstr "Quarkus Kafka extensionは、 link:deploying-to-kubernetes.html[Service Binding Specification for Kubernetes]をサポートしています。これを有効にするには、アプリケーションに `quarkus-kubernetes-service-binding` 拡張機能を追加します。"
+msgstr "Quarkus Kafka extensionは、 link:deploying-to-kubernetes.html[Service Binding Specification for Kubernetes]をサポートしています。これを有効にするには、アプリケーションに `quarkus-kubernetes-service-binding` エクステンションを追加します。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:1844
