--- a/l10n/po/ja_JP/_guides/amqp-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/amqp-reference.adoc.po
@@ -1011,7 +1011,7 @@ msgstr "健康報告"
 #: upstream/_guides/amqp-reference.adoc:463
 #, fuzzy
 msgid "If you use the AMQP connector with the `quarkus-smallrye-health` extension, it contributes to the readiness and liveness probes.  The AMQP connector reports the readiness and liveness of each channel managed by the connector.  At the moment, the AMQP connector uses the same logic for the readiness and liveness checks."
-msgstr "AMQP コネクタを `quarkus-smallrye-health` 拡張機能と一緒に使用すると、準備状態とライブネスのプローブに貢献します。AMQP コネクタは、コネクタで管理されている各チャネルのレディネスとライヴネスを報告します。現時点では、AMQP コネクタは準備状況とライヴネスのチェックに同じロジックを使用しています。"
+msgstr "AMQP コネクタを `quarkus-smallrye-health` エクステンションと一緒に使用すると、準備状態とライブネスのプローブに貢献します。AMQP コネクタは、コネクタで管理されている各チャネルのレディネスとライヴネスを報告します。現時点では、AMQP コネクタは準備状況とライヴネスのチェックに同じロジックを使用しています。"
 
 #. type: Plain text
 #: upstream/_guides/amqp-reference.adoc:467
